Migrate Bartholomew documentation
This commit migrates the Bartholomew documentation from its standalone
website to the Fermyon Developer Home website.

Signed-off-by: Radu Matei <radu.matei@fermyon.com>

--- a/templates/content_navbar.hbs
+++ b/templates/content_navbar.hbs
@@ -45,6 +45,8 @@
             <a href="/spin/index" class="{{#if (active_project request.spin-path-info "/spin/" )}} is-active {{/if}} navbar-item"><span>Spin</span></a>
 
             <a href="/cloud/index" class="{{#if (active_project request.spin-path-info "/cloud/" )}} is-active {{/if}} navbar-item"><span>Cloud</span></a>
+        
+            <a href="/bartholomew/index" class="{{#if (active_project request.spin-path-info "/bartholomew/" )}} is-active {{/if}} navbar-item"><span>Bartholomew</span></a>
         </div>
 
         <div class="navbar-end">
